# TASView

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
src/: Application.cpp  Application.hpp  Block.cpp  Block.hpp  IPC.hpp  MessageQueue.cpp  MessageQueue.hpp  MessageThread.cpp  MessageThread.h  MessageThread.hpp  Renderer.cpp  Renderer.hpp  TASView.cpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  stdafx.hpp
src/Blocks/: Clips.cpp  Clips.hpp  Framerate.cpp  Framerate.hpp  Remainder.cpp  Remainder.hpp  Time.cpp  Time.hpp  Water.cpp  Water.hpp
src/platform/posix/: IPC.cpp
src/platform/windows/: IPC.cpp  MessageQueue.cpp  MessageQueue.hpp
